--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -187,6 +187,7 @@ call EngineHeaderCopy.bat</Command>
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CFlipBook.h" />
     <ClInclude Include="CFontMgr.h" />
+    <ClInclude Include="CFSM.h" />
     <ClInclude Include="CGameObject.h" />
     <ClInclude Include="CGraphicShader.h" />
     <ClInclude Include="CKeyMgr.h" />
@@ -244,6 +245,7 @@ call EngineHeaderCopy.bat</Command>
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CFlipBook.cpp" />
     <ClCompile Include="CFontMgr.cpp" />
+    <ClCompile Include="CFSM.cpp" />
     <ClCompile Include="CGameObject.cpp" />
     <ClCompile Include="CGraphicShader.cpp" />
     <ClCompile Include="CKeyMgr.cpp" />
