--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -209,6 +209,7 @@ call EngineHeaderCopy.bat</Command>
     <ClInclude Include="CShader.h" />
     <ClInclude Include="CSound.h" />
     <ClInclude Include="CSprite.h" />
+    <ClInclude Include="CState.h" />
     <ClInclude Include="CStructuredBuffer.h" />
     <ClInclude Include="CTaskMgr.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
@@ -266,6 +267,7 @@ call EngineHeaderCopy.bat</Command>
     <ClCompile Include="CShader.cpp" />
     <ClCompile Include="CSound.cpp" />
     <ClCompile Include="CSprite.cpp" />
+    <ClCompile Include="CState.cpp" />
     <ClCompile Include="CStructuredBuffer.cpp" />
     <ClCompile Include="CTaskMgr.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
