--- a/Project/States/States.vcxproj
+++ b/Project/States/States.vcxproj
@@ -74,10 +74,12 @@
     <IncludePath>$(SolutionDir)External\Include\;$(ProjectDir);$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)External\Library\;$(LibraryPath)</LibraryPath>
     <TargetName>$(ProjectName)_D</TargetName>
+    <OutDir>$(SolutionDir)External\Library\States\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)External\Include\;$(ProjectDir);$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)External\Library\;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)External\Library\States\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -164,22 +166,14 @@ call CodeGen.exe
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AttackState.h" />
+    <ClInclude Include="CIdleState.h" />
     <ClInclude Include="CStateMgr.h" />
-    <ClInclude Include="DeadState.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="HitState.h" />
-    <ClInclude Include="IdleState.h" />
-    <ClInclude Include="MoveState.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AttackState.cpp" />
+    <ClCompile Include="CIdleState.cpp" />
     <ClCompile Include="CStateMgr.cpp" />
-    <ClCompile Include="DeadState.cpp" />
-    <ClCompile Include="HitState.cpp" />
-    <ClCompile Include="IdleState.cpp" />
-    <ClCompile Include="MoveState.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
