--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="MeshUI.h" />
     <ClInclude Include="ParamUI.h" />
     <ClInclude Include="ParticleSystemUI.h" />
+    <ClInclude Include="PlatformEditor.h" />
     <ClInclude Include="PrefabUI.h" />
     <ClInclude Include="ScriptUI.h" />
     <ClInclude Include="SE_AtlasView.h" />
@@ -269,6 +270,7 @@
     <ClCompile Include="MeshUI.cpp" />
     <ClCompile Include="ParamUI.cpp" />
     <ClCompile Include="ParticleSystemUI.cpp" />
+    <ClCompile Include="PlatformEditor.cpp" />
     <ClCompile Include="PrefabUI.cpp" />
     <ClCompile Include="ScriptUI.cpp" />
     <ClCompile Include="SE_AtlasView.cpp" />
