--- a/Project/Scripts/Scripts.vcxproj
+++ b/Project/Scripts/Scripts.vcxproj
@@ -169,6 +169,7 @@ call CodeGen.exe
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CGhoulScript.h" />
     <ClInclude Include="CMarkerScript.h" />
+    <ClInclude Include="CMAttackScript.h" />
     <ClInclude Include="CPlatformScript.h" />
     <ClInclude Include="CSlashScript.h" />
     <ClInclude Include="CPlayerScript.h" />
@@ -181,6 +182,7 @@ call CodeGen.exe
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CGhoulScript.cpp" />
     <ClCompile Include="CMarkerScript.cpp" />
+    <ClCompile Include="CMAttackScript.cpp" />
     <ClCompile Include="CPlatformScript.cpp" />
     <ClCompile Include="CSlashScript.cpp" />
     <ClCompile Include="CPlayerScript.cpp" />
