--- a/Project/Scripts/Scripts.vcxproj
+++ b/Project/Scripts/Scripts.vcxproj
@@ -175,6 +175,7 @@ call CodeGen.exe
     <ClInclude Include="CPlayerScript.h" />
     <ClInclude Include="CScriptMgr.h" />
     <ClInclude Include="CSpawnerScript.h" />
+    <ClInclude Include="CTriggerScript.h" />
     <ClInclude Include="CursorScript.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
@@ -189,6 +190,7 @@ call CodeGen.exe
     <ClCompile Include="CPlayerScript.cpp" />
     <ClCompile Include="CScriptMgr.cpp" />
     <ClCompile Include="CSpawnerScript.cpp" />
+    <ClCompile Include="CTriggerScript.cpp" />
     <ClCompile Include="CursorScript.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
